# sudoku

./: .gitignore  Cargo.toml  rustfmt.toml
puzzles/: 16.txt  16hard.txt  25.txt  25solvedheck.txt  25u.txt  25u2.txt  36solved.txt  36u.txt  36u2.txt  36u22.txt  36u222.txt  4easy.txt  81hard.txt
sudoku/: Cargo.toml  Makefile
sudoku/src/: board.rs  generator.rs  hintmap.rs  lib.rs  solver.rs
sudoku_cli/: Cargo.toml
sudoku_cli/src/: main.rs  test.rs
sudoku_gui_glium/: Cargo.toml
sudoku_gui_glium/src/: main.rs
